# simple_ops

./: CMakeLists.txt  README.md  build.sh  run_all.sh
01_vector_add/: op_add.asc
02_vector_relu/: op_relu.asc
03_vector_sigmoid/: op_sigmoid.asc
04_vector_abs/: op_abs.asc
05_cube_matmul/: op_matmul.asc
06_cube_matmul_bias/: op_matmul_bias.asc
07_cube_matmul_large/: op_matmul_large.asc
08_fusion_matmul_relu/: op_matmul_relu.asc
09_fusion_matmul_bias_relu/: op_matmul_bias_relu.asc
10_fusion_matmul_add/: op_matmul_add.asc
11_cpu_topk/: op_topk.cpp
12_cpu_sort/: op_sort.cpp
13_cpu_nms/: op_nms.cpp
common/: data_utils.h
scripts/: gen_data.py
